@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
title Class structure — Invoke the CLI

class Program {
  +Main(args: string[]): Task<int>
}
class RootCommandFactory {
  +Create(): RootCommand
  -CreateIncremental(kind: GenerationKind): Command
  -CreateFullStackCommand(): Command
}
class CliExceptionPolicy {
  +ExecuteAsync(operation, error, diagnostic, cancellationToken): Task<int>
}
class "Option<T>" as OptionT {
  +Aliases: IReadOnlyList<string>
  +Required: bool
  +Recursive: bool
}
interface IIncrementalGenerator
interface IFullStackGenerator

Program ..> RootCommandFactory : resolves / calls
RootCommandFactory *-- OptionT : defines
RootCommandFactory --> CliExceptionPolicy : centralizes outcomes
RootCommandFactory --> IIncrementalGenerator : dispatches
RootCommandFactory --> IFullStackGenerator : dispatches
@enduml
